--- a/css/style.css
+++ b/css/style.css
@@ -62,9 +62,23 @@ label {
 
 /* CSS para movil */
 
-/* @media screen and (max-width:480px) */
+@media screen and (max-width: 480px) {
+    .text-box1, .text-box2{
+        width: 100%;
+    }
 
-@media screen and (max-width: 480px){
+    .text-box1 > label, .text-box2 > label{
+        margin: 1em;
+    }
+
+    #boton-desencriptar, #boton-copiar{
+        margin-bottom: 1em;
+    }
+}
+
+/* Tablet */
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
     .text-box1, .text-box2{
         width: 100%;
     }
